# LearnOpenGLES

./: CMakeLists.txt  readme.md
Android/: .gitignore  settings.gradle
Android/app/: build.gradle
Android/app/assets/shaders/Simple_01_Examples/01_Triangle/: triangle.frag  triangle.vert
Android/app/assets/shaders/Simple_01_Examples/02_Texture2DCube/: cube.frag  cube.vert
Android/app/assets/shaders/Simple_01_Examples/03_PhongLighting/: cube.frag  cube.vert
Android/app/src/androidTest/java/com/engineer1109/openglestest/: ExampleInstrumentedTest.java
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/cpp/: CMakeLists.txt  OpenGLESRender.cpp  OpenGLESRender.h  native-lib.cpp
Android/app/src/main/cpp/base/: OpenGLESBase.cpp  OpenGLESBase.cxx  OpenGLESBase.h  shader_m.h
Android/app/src/main/cpp/common/: base_template.h  render_common.h  vertex_struct.h
Android/app/src/main/cpp/engine/: ThirdPersonEngine.cxx  ThirdPersonEngine.h
Android/app/src/main/cpp/engines/PhongLighting/: PhongLighting.cpp  PhongLighting.h  PhongLightingCube.cxx  PhongLightingCube.h
Android/app/src/main/cpp/engines/Texture2DCube/: Texture2DCube.cpp  Texture2DCube.h
Android/app/src/main/cpp/engines/Triangle/: Triangle.cpp  Triangle.h
Android/app/src/main/cpp/examples/PhongLighting/: PhongLighting.cpp  PhongLighting.h  PhongLightingCube.cxx  PhongLightingCube.h
Android/app/src/main/cpp/examples/Texture2DCube/: Texture2DCube.cpp  Texture2DCube.h
Android/app/src/main/cpp/examples/Texture2DCube/myobjects/: Cube.cpp  Cube.h
Android/app/src/main/cpp/examples/Triangle/: Triangle.cpp  Triangle.h
Android/app/src/main/cpp/examples/Triangle/myobjects/: TriangleObject.cpp  TriangleObject.h
Android/app/src/main/cpp/examples/VolumeCloud/: VolumeCloud.cxx  VolumeCloud.h
Android/app/src/main/cpp/template/: OpenGLESCube.cxx  OpenGLESCube.h  OpenGLESObject.cxx  OpenGLESObject.h  OpenGLESTexture.cxx  OpenGLESTexture.h
Android/app/src/main/cpp/template/camera/: ThirdPersonCamera.h
Android/app/src/main/cpp/template/material/: OpenGLESMaterial.cxx  OpenGLESMaterial.h
Android/app/src/main/cpp/template/mesh/: OpenGLESCube.cxx  OpenGLESCube.h  OpenGLESMeshObject.cxx  OpenGLESMeshObject.h
Android/app/src/main/cpp/template/texture/: OpenGLESTexture.cxx  OpenGLESTexture.h  OpenGLESTexture2D.cxx  OpenGLESTexture2D.h  OpenGLESTexture3D.cxx  OpenGLESTexture3D.h
Android/app/src/main/cpp/template/uniform/: OpenGLESUniform.cxx  OpenGLESUniform.h  UniformCamera.cxx  UniformCamera.h
Android/app/src/main/java/com/engineer1109/openglesdemo/: MainActivity.java
Android/app/src/main/java/com/engineer1109/openglesdemo/activities/: BaseRenderActivity.java
Android/app/src/main/java/com/engineer1109/openglesdemo/adapters/: MenuAdapter.java  SurfaceAdapters.java
Android/app/src/main/java/com/engineer1109/openglesdemo/fragments/: SimpleExampleFragment.java
Android/app/src/main/java/com/engineer1109/openglesdemo/itemdecoration/: VerticalRecyclerItemDecoration.java
Android/app/src/main/java/com/engineer1109/openglesdemo/model/: MenuData.java
Android/app/src/main/res/layout/: activity_base_render.xml  activity_main.xml  fragment_simple_example.xml  layout_menu.xml
Android/app/src/main/res/values/: strings.xml
Android/app/src/test/java/com/engineer1109/openglestest/: ExampleUnitTest.java
cmake/: Config.cmake  FindOpenGLES.cmake  GCC.cmake  Platform.cmake
data/shaders/Simple_01_Examples/01_Triangle/: triangle.frag  triangle.vert
data/shaders/Simple_01_Examples/02_Texture2dCube/: cube.vert
data/shaders/Simple_01_Examples/03_PhongLighting/: cube.vert
data/shaders/Simple_01_Examples/04_VolumeCloud/: volumecloud.frag  volumecloud.vert
data/shaders/Simple_01_Triangle/01_Triangle/: triangle.frag  triangle.vert
examples/: CMakeLists.txt
examples/01_Simple_Examples/: CMakeLists.txt
examples/01_Simple_Examples/01_Triangle/: CMakeLists.txt
examples/01_Simple_Examples/01_Triangle/include/: triangle.h
examples/01_Simple_Examples/01_Triangle/src/: main.cxx  triangle.cxx
examples/01_Simple_Examples/02_Texture2dCube/: CMakeLists.txt
examples/01_Simple_Examples/02_Texture2dCube/include/: texture2dcube.h
examples/01_Simple_Examples/02_Texture2dCube/src/: main.cxx  texture2dCube.cxx
examples/01_Simple_Examples/03_PhongLighting/: CMakeLists.txt
examples/01_Simple_Examples/03_PhongLighting/include/: cube.h  phonglighting.h
examples/01_Simple_Examples/03_PhongLighting/src/: cube.cxx  main.cxx  phonglighting.cxx
examples/01_Simple_Examples/04_VolumeCloud/: CMakeLists.txt
examples/01_Simple_Examples/04_VolumeCloud/include/: texture3dcloud.h  volumecloud.h
examples/01_Simple_Examples/04_VolumeCloud/src/: main.cxx  texture3dcloud.cxx  volumecloud.cxx
examples/03_QtOpenGLES/: CMakeLists.txt
examples/03_QtOpenGLES/01_QtTriangle/: CMakeLists.txt
examples/03_QtOpenGLES/01_QtTriangle/include/: mainwindow.h  triangle.h
examples/03_QtOpenGLES/01_QtTriangle/src/: main.cxx  mainwindow.cxx  mainwindow.ui  triangle.cxx
include/openglesbase/: camera.h  keycodes.h  opengles_basicengine.h  opengles_basicengine_algorithm.h  opengles_basicengine_algorithm_graphics.h  opengles_basicengine_cube.h  opengles_basicengine_filesystem.h  opengles_basicengine_help.h  opengles_basicengine_object.h  opengles_basicengine_texture.h  opengles_basicengine_texture2dobject.h  opengles_basicengine_texture3dobject.h  opengles_basicengine_texture3dplane.h  opengles_imgui.h  openglesbase.h  openglesbase_def.h  openglesbase_export.h  shader_m.h
include/qtopengleswindow/: qtopenglesengine.h  qtopengleswindow.h  qtopengleswindow.h.autosave  qtopengleswindow_export.h
lib/opengles/: libEGL.so.1  libEGL.so.1.4.0  libGLESv2.so.3  libGLESv2.so.3.2.0
src/: CMakeLists.txt
src/openglesbase/: CMakeLists.txt  opengl_imgui.cxx  opengles_basicengine.cxx  opengles_basicengine_cube.cxx  opengles_basicengine_object.cxx  opengles_basicengine_texture.cxx  opengles_basicengine_texture3dplane.cxx  openglesbase.cxx
src/qtopengleswindow/: CMakeLists.txt  qtopenglesengine.cxx  qtopengleswindow.cxx
(+4 files in other folders)
