cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
SET(LEARN_OPENGLES_PROJECT Simple_02_Texture2dCube)

FILE(GLOB_RECURSE SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/*)
FILE(GLOB HEAD_FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/*)


include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
add_executable(${LEARN_OPENGLES_PROJECT} ${SRC_FILES} ${HEAD_FILES})
TARGET_LINK_LIBRARIES(${LEARN_OPENGLES_PROJECT} opengles_basicengine)

INSTALL(TARGETS ${LEARN_OPENGLES_PROJECT} DESTINATION "${PROJECT_SOURCE_DIR}/bin")

#Softlink(${CMAKE_CURRENT_BINARY_DIR})
