SET(LEARN_OPENGLES_PROJECT Qt_01_Triangle)

FILE(GLOB_RECURSE SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/*)
FILE(GLOB HEAD_FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/*)
FILE(GLOB UI_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.ui)

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
add_executable(${LEARN_OPENGLES_PROJECT} ${SRC_FILES} ${HEAD_FILES} ${UI_FILES})

TARGET_LINK_LIBRARIES(${LEARN_OPENGLES_PROJECT} qtopengleswindow)

set_property(TARGET ${LEARN_OPENGLES_PROJECT} PROPERTY CXX_STANDARD 17)
